--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -26,6 +26,13 @@
       margin-right: 0.5rem;
       color: #e63946;
     }
+
+    .logo-link {
+      text-decoration: none;
+      color: inherit;
+      display: flex;
+      align-items: center;
+    }
   }
 
   .nav {
