--- a/src/pages/Estoque/Estoque.scss
+++ b/src/pages/Estoque/Estoque.scss
@@ -61,6 +61,7 @@
     .filtro-toggle-btn {
       background-color: #1d3557;
       border-color: #1d3557;
+      color: white;
       width: 100%;
       padding: 0.4rem;
       font-size: 0.85rem;
@@ -175,6 +176,7 @@
         width: 100%;
         background-color: #1d3557;
         border-color: #1d3557;
+        color: white;
         padding: 0.4rem;
         font-size: 0.85rem;
         font-weight: 500;
