--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,7 +2,7 @@
   background-color: #111;
   color: #eee;
   padding: 4rem 2rem 2rem;
-  
+
   .footer-container {
     display: flex;
     flex-wrap: wrap;
@@ -16,14 +16,15 @@
       flex: 1;
       min-width: 300px;
 
-      h3, h4 {
+      h3,
+      h4 {
         color: #fff;
         margin-bottom: 1.5rem;
         position: relative;
         font-weight: 600;
-        
+
         &::after {
-          content: '';
+          content: "";
           position: absolute;
           left: 0;
           bottom: -8px;
@@ -40,7 +41,7 @@
         margin-bottom: 1rem;
       }
     }
-    
+
     .footer-about {
       .footer-socials {
         margin-top: 2rem;
@@ -66,20 +67,20 @@
         }
       }
     }
-    
+
     .footer-contact {
       .contact-item {
         display: flex;
         margin-bottom: 1.2rem;
         align-items: flex-start;
-        
+
         .icon {
           color: #e63946;
           font-size: 1.2rem;
           margin-right: 1rem;
           margin-top: 3px;
         }
-        
+
         p {
           margin: 0;
         }
@@ -98,34 +99,35 @@
       color: #aaa;
     }
   }
-  
+
   @media (max-width: 768px) {
     .footer-container {
       flex-direction: column;
       gap: 2rem;
-      
+
       .footer-about,
       .footer-contact {
         text-align: center;
-        
-        h3, h4 {
+
+        h3,
+        h4 {
           &::after {
             left: 50%;
             transform: translateX(-50%);
           }
         }
       }
-      
+
       .footer-about {
         .footer-socials {
           justify-content: center;
         }
       }
-      
+
       .footer-contact {
         .contact-item {
           justify-content: center;
-          
+
           .icon {
             margin-right: 0.5rem;
           }
